--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
-.header{
-    display: felx;
-    font-size: 60px;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
-    font-family: Times, Times New Roman, serif;
-    margin-top:  20px;
+
+
+.header img {
+    width: 150px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
 
   
 }
